[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/HUD/HUD_LIFEBAR_START.png" type="Texture" id=1]
[ext_resource path="res://sprites/HUD/HUD_LIFE1.png" type="Texture" id=2]
[ext_resource path="res://sprites/HUD/HUD_LIFE3.png" type="Texture" id=3]
[ext_resource path="res://sprites/HUD/HUD_LIFE2.png" type="Texture" id=4]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=5]
[ext_resource path="res://sprites/HUD/HUD_LIFEBAR_END.png" type="Texture" id=6]
[ext_resource path="res://sprites/HUD/HUD_LIFEBAR_MID.png" type="Texture" id=7]
[ext_resource path="res://Gamer.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 8 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Lifebar" type="Node2D" parent="."]
modulate = Color( 1, 0.996078, 0.647059, 1 )
position = Vector2( 895.725, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Life_start" type="Sprite" parent="Lifebar"]
position = Vector2( 64, 32 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Life_mid1" type="Sprite" parent="Lifebar"]
position = Vector2( 64, 32 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Life_end" type="Sprite" parent="Lifebar"]
position = Vector2( 64, 32 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="bar_start" type="Sprite" parent="Lifebar"]
position = Vector2( 64, 32 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="bar_mid" type="Sprite" parent="Lifebar"]
position = Vector2( 64, 32 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="bar_end" type="Sprite" parent="Lifebar"]
position = Vector2( 64, 32 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="InfoText" type="RichTextLabel" parent="."]
margin_right = 341.0
margin_bottom = 107.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoText2" type="RichTextLabel" parent="."]
margin_left = 125.0
margin_top = 183.0
margin_right = 970.0
margin_bottom = 477.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
